# Nest-PG

./: README.md
backend/: .env  app.db  migration_check.db  out.txt  output.txt  pyproject.toml  pytest.ini  requirements.txt  test_out.txt  test_results.txt
backend/.codex-manual-tests/: smoke.db
backend/.codex-manual-tests/test_city_search_rejects_blank_city/: test.db
backend/.codex-manual-tests/test_city_search_returns_listings/: test.db
backend/.codex-manual-tests/test_compare_requires_two_listings/: test.db
backend/.codex-manual-tests/test_contact_create_and_status_flow/: test.db
backend/.codex-manual-tests/test_contact_rejects_duplicate_recent_inquiry/: test.db
backend/.codex-manual-tests/test_contact_rejects_listing_with_closed_inquiries/: test.db
backend/.codex-manual-tests/test_contact_status_forbidden_for_different_user/: test.db
backend/.codex-manual-tests/test_listing_detail_and_compare_work/: test.db
backend/.codex-manual-tests/test_listing_details_return_410_for_inactive_listing/: test.db
backend/.codex-manual-tests/test_login_rejects_invalid_password/: test.db
backend/.codex-manual-tests/test_login_returns_tokens/: test.db
backend/.codex-manual-tests/test_me_returns_authenticated_user/: test.db
backend/.codex-manual-tests/test_nearby_search_returns_results/: test.db
backend/.codex-manual-tests/test_recent_searches_collapse_duplicates_to_latest/: test.db
backend/.codex-manual-tests/test_recent_searches_create_list_get_context_delete/: test.db
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: test_api.py
(+135 files in other folders)
