[project]
name = "my-pg-user"
version = "0.1.0"
description = "User module discovery-to-contact API"
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "sqlalchemy==2.0.40",
  "alembic==1.15.2",
  "pydantic==2.11.4",
  "pydantic-settings==2.9.1",
  "python-jose[cryptography]==3.3.0",
  "python-multipart==0.0.20",
]

[tool.uv]
dev-dependencies = [
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "httpx==0.28.1",
]
